[package]
name = "cached_tree_hash"
version = "0.1.0"
authors = ["Michael Sproul <michael@sigmaprime.io>"]
edition = "2018"

[dependencies]
ethereum-types = "0.8.0"
eth2_ssz_types = { path = "../ssz_types" }
eth2_hashing = { path = "../eth2_hashing" }
eth2_ssz_derive = { path = "../ssz_derive" }
eth2_ssz = { path = "../ssz" }
tree_hash = { path = "../tree_hash" }

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.8"
