[package]
name = "eth2_ssz_types"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2018"

[lib]
name = "ssz_types"

[dependencies]
tree_hash = { path = "../tree_hash" }
serde = "1.0.102"
serde_derive = "1.0.102"
serde_hex = { path = "../serde_hex" }
eth2_ssz = { path = "../ssz" }
typenum = "1.11.2"

[dev-dependencies]
serde_yaml = "0.8.11"
tree_hash_derive = "0.2"
